# gstImageStreamIO

./: .gitmodules  CMakeLists.txt  README.md  compile.sh  launch_pipeline_debug.sh  stream.sdp
gstImageStreamsrc/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  launch_pipeline.sh  launch_pipeline_debug.sh  libtool  rt_launch_pipeline.sh
gstImageStreamsrc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gstImageStreamsrc/src/: Makefile  Makefile.am  Makefile.in  gstImageStreamsrc.c  gstImageStreamsrc.h
gstImageStreamsrc/src/.deps/: libgstImageStreamsrc_la-gstImageStreamsrc.Plo  libgstrawshmsrc_la-gstrawshmsrc.Plo  libgstrawshmsrc_la-makeimage.Plo
scripts/: launch_pipeline.sh  startPipeline
src/: client.c  gstImageStreamIO.c  gstImageStreamIOsrc.c  gstImageStreamIOsrc.h  server.c
